@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-14T16:12:54Z",
-  "count_outdated" : 162,
-  "uniques_outdated" : 136,
-  "count" : 169,
-  "uniques" : 143,
+  "timestamp" : "2023-08-15T08:13:49Z",
+  "count_outdated" : 163,
+  "uniques_outdated" : 137,
+  "count" : 170,
+  "uniques" : 144,
   "clones" : [
-    {
-      "timestamp": "2023-08-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-02T00:00:00Z",
       "count": 1,
@@ -61,6 +52,15 @@
     },
     {
       "timestamp": "2023-08-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
